--- a/2lesson.html
+++ b/2lesson.html
@@ -3,10 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Доска объявлений</title>
+    <style>
+        .italic {
+            font-style: italic;
+            text-align: center;
+            font-size: 24px;
+            text-shadow: 2px 2px green;
+        }
+    </style>
 </head>
 <body>
     <h1>Заголовок 1</h1>
-        <div>
+    <div class="italic">
         <span>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
             A animi dicta dolor enim eveniet exercitationem explicabo id illo
